--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://shanky74022:your-password@cluster0.ve3jydl.mongodb.net
 CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET = shashank
+ACCESS_TOKEN_EXPIRY = 1d
+REFRESH_TOKEN_SECRET = shekhar
+REFRESH_TOKEN_EXPIRY = 10d
